--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build ./cmdstanpy --file Dockerfile --tag fohria/cmdstanpy:latest
+      run: docker build --file ./cmdstanpy/Dockerfile --tag fohria/cmdstanpy:latest
     # https://github.com/docker/login-action
     - name: Log into Docker Hub
       uses: docker/login-action@v1
