--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,7 @@ jobs:
     # below from https://github.com/docker/build-push-action/issues/51#issuecomment-702506036
     - uses: docker/build-push-action@v2
       with:
+        push: true
         context: ./cmdstanpy
         file: ./cmdstanpy/Dockerfile
         tags: fohria/cmdstanpy:latest
